fix(style): gap between wave and block in shape-divider in some resolutions

--- a/assets/styles/components/_shape-divider.scss
+++ b/assets/styles/components/_shape-divider.scss
@@ -24,6 +24,7 @@
 		display: block;
 		width: calc(100% + 1.3px);
 		height: 62px;
+		margin-top: -1px;
 	}
 	.shape-fill {
 		fill: $primary;
